# roots-huh

./: Cargo.toml  Makefile  dev.md  mechanics.md
src/: branch.rs  draw.rs  main.rs  numeric.rs  organ.rs  soil.rs  stats.rs  ui.rs
src/model/: branch.rs  map.rs  mod.rs  organ.rs  plant.rs  soil.rs
