[package]
name = "root-tactics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = ">=1.0", features = ["derive"] }
serde_json = "1.0"
glam = {version = "=0.21.*", features = ["scalar-math"] }
macroquad = ">=0.3"
